fix(recipe): fixed ingreditent overflow

--- a/client/src/views/styles/recipe.scss
+++ b/client/src/views/styles/recipe.scss
@@ -21,10 +21,8 @@
 
 .ingredients-container {
   border-radius: colors.$general-border-radius;
-  
-  overflow: hidden;
   display: flex;
-  // margin-bottom: spacing.$desktop-general-margin + 10;
+  
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -32,9 +30,7 @@
   padding: spacing.$desktop-inner-padding;
   background-color: colors.$primary-container-color;
   width: 100%;
-  // border-radius: colors.$general-border-radius;
-  
-  // margin: 0 auto;
+
 
   .title {
     margin-top: spacing.$desktop-medium-margin;
@@ -43,7 +39,8 @@
 
   .scroll-container {
     display: flex;
-    overflow: auto;
+    flex-wrap: wrap;
+    justify-content: center;
     border-radius: colors.$general-border-radius;
   }
 
@@ -65,8 +62,8 @@
 .method-container {
   border-radius: colors.$general-border-radius;
   box-shadow: colors.$container-shadow;
-  overflow: hidden;
   display: flex;
+  flex-wrap: wrap;
   margin-bottom: spacing.$desktop-general-margin;
   background-color: colors.$primary-container-color;
 }
